fix: Campo de input estava com z-index errado

--- a/views/contact/contact.css
+++ b/views/contact/contact.css
@@ -17,7 +17,6 @@
   padding: 15px 30px;
   border-radius: inherit;
   border: 1px solid;
-  z-index: -30;
 }
 
 .contact-form textarea {
